--- a/src/app/pokemon-api/pokemon-api.component.html
+++ b/src/app/pokemon-api/pokemon-api.component.html
@@ -1,5 +1,11 @@
 <div class="row">
     <div class="col text-center">
-        <h2>Pokemon api</h2>
+        <app-lista></app-lista>
     </div>
 </div>
+<div class="row">
+    <div class="col text-center">
+        <app-informacion></app-informacion>
+    </div>
+</div>
+
