--- a/src/app/lista/lista.component.html
+++ b/src/app/lista/lista.component.html
@@ -1,30 +1,22 @@
-<table class="table">
+<table class="table table-hover" style="cursor: pointer;">
     <thead>
       <tr>
-        <th scope="col">#</th>
         <th scope="col">Nombre</th>
-        <th scope="col">Primera habilidad</th>
-        <th scope="col">Imagenes</th>
-        <th scope="col">Acciones</th>
+        <th scope="col">Link</th>
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
+      <tr *ngFor="let item of request.results" (click)="pickPoke(item.name)">
+        <td>{{item.name}}</td>
+        <td>{{item.url}}</td>
       </tr>
     </tbody>
+
+    <button class="btn btn-primary" (click)="getPokes(actualPage + 1)" >
+      Siguiente
+    </button>
+
+    <button class="btn btn-danger" (click)="getPokes(actualPage - 1)" [disabled]="actualPage === 1">
+      Regresar
+    </button>
   </table>
